image in menu chaged border and location

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
       </header>
       <div class="hero">
         <div class="top">
-          <h1>Coffee and Code</h1>
-          <p>
-            Join us at Cannons Coffee for a pick-me-up and plenty of code
-            assistance and support at our coding cafe!
-          </p>
+          <div class="top-h1-p">
+            <h1>Coffee and Code</h1>
+            <p>
+              Join us at Cannons Coffee for a pick-me-up and plenty of code
+              assistance and support at our coding cafe!
+            </p>
+          </div>
           <img
             src="https://assets.codepen.io/296057/coffee-computer.jpg"
             alt=" Laptop with a cup of coffee and a glass of water"
@@ -53,51 +55,54 @@
           <div class="menu">
             <div class="latte">
               <h2>Latte</h2>
-              <p>
-                Hot or cold, with dairy or oat milk, your favorite is available
-                anytime!
-              </p>
               <img
                 src=" https://assets.codepen.io/296057/latte.jpg"
                 alt=" Latte in a cup"
               />
+              <p>
+                Hot or cold, with dairy or oat milk, your favorite is available
+                anytime!
+              </p>
+
               <p><a href="" target="_blank" class="button">ORDER NOW</a></p>
             </div>
             <div class="coffee">
               <h2>Coffee</h2>
-              <p>
-                Simple, elegant, and always in style, our black coffee comes
-                from Colombia in small, hand-roasted batches.
-              </p>
               <img
                 src="https://assets.codepen.io/296057/hotchoc.jpg"
                 alt="Coffee in a cup"
               />
+              <p>
+                Simple, elegant, and always in style, our black coffee comes
+                from Colombia in small, hand-roasted batches.
+              </p>
+
               <p><a href="" target="_blank" class="button">ORDER NOW</a></p>
             </div>
             <div class="hot-coco">
               <h2>Hot Chocolate</h2>
-              <p>
-                Not a coffee person? We have you covered. Hot, sweet, ready
-                anytime.
-              </p>
               <img
                 src="https://assets.codepen.io/296057/hotchoc.jpg"
                 alt="Hot Chocolate in a cup with whipped cream"
               />
+              <p>
+                Not a coffee person? We have you covered. Hot, sweet, ready
+                anytime.
+              </p>
+
               <p><a href="" target="_blank" class="button">ORDER NOW</a></p>
             </div>
             <div class="ice">
               <h2>Iced Coffee</h2>
+              <img
+                src=" https://assets.codepen.io/296057/iced.jpg 
+  "
+                alt="Iced coffee in a mug with a straw "
+              />
               <p>
                 Perfect for hot summer days, our iced coffee is made with just
                 enough sweetness to cool down your day.
               </p>
-              <img
-                src=" https://assets.codepen.io/296057/iced.jpg 
-      "
-                alt="Iced coffee in a mug with a straw "
-              />
               <p><a href="" target="_blank" class="button">ORDER NOW</a></p>
             </div>
           </div>
@@ -108,7 +113,7 @@
               ><img
                 src="https://assets.codepen.io/296057/logo-footer.png"
                 alt=" Iced coffee in a mug with a straw 
-      "
+    "
                 class="FooterLogo"
             /></a>
           </p>
